# imstudy

./: pyproject.toml
gui/: main.py
gui/common/: directory_tree.py  image_canvas.py  imfile_model.py  mpl.py
gui/imlabel/: imlabelframe.py
